--- a/lab3/index.html
+++ b/lab3/index.html
@@ -3,8 +3,11 @@
 <head>
 	<title>Lab X - Subject/Topic</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<link rel="stylesheet" type="text/css" href="css/LAB3.css">
 </head>
+	<p>
+		what is this
+	</p>
 <body>
 
 </body>
