--- a/lab2/index2.html
+++ b/lab2/index2.html
@@ -14,7 +14,7 @@
 
 		<img id= "bird" src= "img/birb.jpg" alt = "its a birb" >
 
-		<p> Here is a crow with a flower, he hopes you have a great day. </p>
+		<p> Here is a crow with a flower, he hopes you have a great day </p>
 	</div>
 
 	</body>
