--- a/index.html
+++ b/index.html
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My_Name Homepage</title>
+	<title>Brandon_C Homepage</title>
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 </head>
 <body>
 	<main>
-		<p>This page was generated from Wes' File Structure Template Repo.</p>
+		<h>
+			Brandon R. Christensen
+		</h>
+		<h3>
+			HOMEPAGE
+		<h3/>
+			<div1>
+			<img id= "headshot" src= "img/headshot.jpg"  >
+		</div1>
+		<p>
+			I am from Santa Monica California. I'm a sophmore AGMP Major at
+			University of Santa Cruz. Some of my hobies include reading,
+			playing video games, and riding my skateboard.
+			</p>
+			<div>
+			<h2> Labs </h2>
+			    <li><a href="lab2/index.html">Lab 2: Your First HTML </a></li>
+			    <li><a href="lab3/index.html">Lab 3: File Structure and File Transfer </a></li>
+			    <li><a href="lab4/index.html">Lab 4: Psuedocoding and Problem-solving </a></li>
+			    <li><a href="lab5/index.html">Lab 5: Data Types and Variables</a></li>
+			    <li><a href="lab6/index.html">Lab 6:Arrays and Objects</a></li>
+		  <div/>
 
-		<p>What is this! AHHHHHH!!!</p>
 	</main>
-
-
 </body>
 </html>
