--- a/lab3/index.html
+++ b/lab3/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 3 - Subject/Topic</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<link rel="stylesheet" type="text/css" href="css/LAB3.css">
+	<link rel="stylesheet" type="text/css" href="css/lab3.css">
 </head>
-	<p>
-		what is this
-	</p>
-<body>
 
+<body>
+	<h1>
+		Lab 3 File Structures <br>
+		</h1>
+	<p1>
+		The idea of this lab was to further create a
+		local file structure on my computer and add index.html files.
+	</p1>
+
+	<h1>
+		Challenges <br>
+		</h1>
+	<p1> There were not any significant challenges for me.
+		I knew how to do majority of the things and everything else
+	I was able to find out how to do on  W3Schools.</p1>
+
+	<h1>
+		Results
+	</h1>
+	<p1>
+	Here is the file structure that we made <br>
+	</p1>
+	<img id= "File_structure" src= "img/File_structure.jpg" alt = "This is the file structure in Atom" >
 </body>
 </html>
