--- a/lab3/index.html
+++ b/lab3/index.html
@@ -28,6 +28,6 @@
 	<p1>
 	Here is the file structure that we made <br>
 	</p1>
-	<img id= "File_structure" src= "img/File_structure.jpg" alt = "This is the file structure in Atom" >
+	<img id= "File_structure" src= "img/File_Structure.jpg" alt = "This is the file structure in Atom" >
 </body>
 </html>
