--- a/lab4/index.html
+++ b/lab4/index.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 4 - Subject/Topic</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<link rel="stylesheet" type="text/css" href="css/lab4.css">
 </head>
 <body>
+	<h1>
+		Lab 4 Pseudocoding and Problem-solving <br>
+		</h1>
 
+
+	<h1>
+		Challenges
+	</h1>
+	<p1>
+		Nothing too challenging. I didn't understand what <thead>
+			pre tags did but eventually I figured it out. I still prefered
+			to use the list functions in this code.
+		</thead>
+	</P1>
+	<h1>
+		Problems <br>
+		</h1>
+	<p1> There were not any problems for me.
+		I understand pseudo code from other coding classes.</p1>
+
+	<h1>
+		Results
+	</h1>
+	<div1>
+<ol>
+	<h3>Pseudo Code for Everyday Task:</h3>
+
+	<li>Gather Supplies: a bowl, favorite cereal, milk, spoon.</li>
+	<li>Pour desired amount of cereal into bowl</li>
+	 <li>Pour desired amount of milk into the same bowl</li>
+	<li>Put the spoon into the bowl.</li>
+	<li>Get cereal and milk on the spoon.</li>
+	<li>Put the contents of the spoon into your mouth.</li>
+	<li>Repeat steps 4-6 until the bowl is empty.</li>
+</ol>
+<ol>
+	<h3>Pseudo Code Computer Task:</h3>
+	<li>Display numbers and symbols</li>
+	<li>Accept user input of equation</li>
+	<li>Validate user equation</li>
+	<li>Locate appropriate operations for given equation</li>
+	<li>Calculate result of user equation</li>
+	<li>Validate result of equation</li>
+	<li>Display result</li>
+</ol>
+
+</div1>
 </body>
 </html>
