--- a/lab5/index.html
+++ b/lab5/index.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 5 - Data Types and Variables</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<link rel="stylesheet" type="text/css" href="css/lab5.css">
 </head>
 <body>
+	<h1>
+		Lab 5: Data Types and Variables <br>
+	</h1>
+
+	<h1>
+		Challenges
+	</h1>
+
+	<p1>
+		The only significant challenge I faced was getting the Script Output
+		to work. With the TA's help eventually we were able to fix it.
+		Everything was fine after that point.
+	</P1>
+
+	<h1>
+		Problems <br>
+	</h1>
+
+	<p1>
+		The Script Output was the only problem everything else went smoothly.
+	</p1>
+
+	<h1>
+		Results
+		<h3>Script Output</h3>
+		<img id= "car" src= "img/tesla.png" alt = "Tesla Model: S 2012" >
+		<div class=output>
+		<script type="text/Javascript" src="js/lab5.js"></script>
+		</div>
+	</h1>
+
 
 </body>
 </html>
