--- a/lab7/index.html
+++ b/lab7/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab 6 - Arrays and Objects</title>
+	<title>Lab 7 - Functions</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<link rel="stylesheet" type="text/css" href="css/lab6.css">
+	<link rel="stylesheet" type="text/css" href="css/lab7.css">
 </head>
 <body>
 	<h1>
-		Lab 6: Arrays and Objects <br>
+		Lab 7: Functions <br>
 	</h1>
 
 	<h1>
@@ -15,8 +15,9 @@
 	</h1>
 
 	<p1>
-	There was no real challenging part for me on this lab. It seems really close
-	to Lab 5. So any issues I figured out on that Lab.
+	There wasn't anything too challenging with this lab. The hardest part was making
+	sure all the variable names matched up within each new line of code. Besides
+	that everything went smoothly enough.
 	</p1>
 
 	<h1>
@@ -24,17 +25,16 @@
 	</h1>
 
 	<p1>
-		No problems. Everything went smoothly this time. I mainly pushed myself to
-		try a new background. Hopefully the background is changing colors when you look at it.
+		Variable names were hard to keep consistent sometimes. I had a lot of problems
+		trying to reference other variables because the capitalization was off. Eventually it
+		all worked out so it wasn't that bad.
 	</p1>
 
 	<h1>
 		Results
 		<h3>Script Output</h3>
-
 		<div>
-        <script src="js/lab6.js"></script>
-				<img id= "car" src= "img/tesla.png" alt = "Tesla Model: S 2012" >
+			<script src="js/lab7.js"></script>
     </div>
 	</h1>
 </body>
