--- a/lab12/index.html
+++ b/lab12/index.html
@@ -37,7 +37,7 @@
 	</h2>
 	<p1> Enter your name </p1><br>
 	<input type= "text" id = "input">
-	<button id = button> Find your House </button>
+	<button id = "button"> Find your House </button>
 
 	<div id = "output">
 	</div>
